@@ -1,5 +1,8 @@
 2009-02-26  Werner Koch  <wk@g10code.com>
 
+	* ext-commands.cpp (InstallCommands): Disable decrypt button for
+	non GpgOl messages.
+
 	* engine.c (engine_encrypt_prepare): Add arg SENDER.
 	* engine-assuan.c (op_assuan_encrypt): Ditto.
 	* mimemaker.c (do_mime_sign): Free sender string.
